--- a/base/extract_resources.cfg
+++ b/base/extract_resources.cfg
@@ -2,6 +2,7 @@ extractResourceFile _common.resources baseref
 extractResourceFile _ordered.resources baseref
 extractResourceFile _sound_pc.resources baseref copysound
 extractResourceFile _sound_pc_en.resources baseref copysound
+extractResourceFile _sound_pc_gr.resources baseref copysound
 
 extractResourceFile maps/admin.resources baseref 
 extractResourceFile maps/alphalabs1.resources baseref
