Added back collision manager and AAS builder to dmap

--- a/neo/tools/compilers/CMakeLists.txt
+++ b/neo/tools/compilers/CMakeLists.txt
@@ -20,6 +20,15 @@ else()
 	list(APPEND MC_SOURCES main_posix.cpp)
 endif()
 
+file(GLOB MC_AAS_INCLUDES ../../aas/*.h)
+file(GLOB MC_AAS_SOURCES ../../aas/*.cpp)
+
+file(GLOB MC_AASBUILD_INCLUDES aas/*.h)
+file(GLOB MC_AASBUILD_SOURCES aas/*.cpp)
+
+file(GLOB MC_CM_INCLUDES ../../cm/*.h)
+file(GLOB MC_CM_SOURCES ../../cm/*.cpp)
+
 set(MC_FRAMEWORK_INCLUDES 
 	../../framework/CmdSystem.h
 	../../framework/CVarSystem.h
@@ -29,6 +38,8 @@ set(MC_FRAMEWORK_INCLUDES
 	../../framework/FileSystem.h
 	../../framework/Licensee.h
 	../../framework/DeclManager.h
+	../../framework/DeclEntityDef.h
+	../../framework/DeclSkin.h
 	../../framework/DeclTable.h
 	../../idlib/precompiled.h
 	)
@@ -40,6 +51,8 @@ set(MC_FRAMEWORK_SOURCES
 	../../framework/File_Resource.cpp
 	../../framework/FileSystem.cpp
 	../../framework/DeclManager.cpp
+	../../framework/DeclEntityDef.cpp
+	../../framework/DeclSkin.cpp
 	../../framework/DeclTable.cpp
 	)
 
@@ -82,16 +95,28 @@ set(MC_RENDERER_SOURCES
 	../../renderer/Model_ma.cpp
 	../../renderer/Model_obj.cpp
 	)
+
+set(MC_GAME_INCLUDES 
+	../../d3xp/anim/Anim.h
+	)
+set(MC_GAME_SOURCES
+	../../d3xp/anim/Anim.cpp
+	../../d3xp/anim/Anim_Blend.cpp
+	)
 	
-file(GLOB MIKKTSPACE_INCLUDES ../../libs/mikktspace/*.h)
-file(GLOB MIKKTSPACE_SOURCES ../../libs/mikktspace/*.c)
+file(GLOB MC_MIKKTSPACE_INCLUDES ../../libs/mikktspace/*.h)
+file(GLOB MC_MIKKTSPACE_SOURCES ../../libs/mikktspace/*.c)
 
 set(MC_INCLUDES_ALL
 			${MC_INCLUDES}
 			${MC_FRAMEWORK_INCLUDES}
 			${MC_RENDERER_INCLUDES}
 			${MC_DMAP_INCLUDES}
-			${MIKKTSPACE_INCLUDES}
+			${MC_AAS_INCLUDES}
+			${MC_AASBUILD_INCLUDES}
+			${MC_CM_INCLUDES}
+			${MC_MIKKTSPACE_INCLUDES}
+			${MC_GAME_INCLUDES}
 			)
 			
 set(MC_SOURCES_ALL
@@ -99,22 +124,35 @@ set(MC_SOURCES_ALL
 			${MC_FRAMEWORK_SOURCES}
 			${MC_RENDERER_SOURCES}
 			${MC_DMAP_SOURCES}
-			${MIKKTSPACE_SOURCES}
+			${MC_AAS_SOURCES}
+			${MC_AASBUILD_SOURCES}
+			${MC_CM_SOURCES}
+			${MC_MIKKTSPACE_SOURCES}
+			${MC_GAME_SOURCES}
 			)
 
 source_group("main" FILES ${MC_INCLUDES})
 source_group("main" FILES ${MC_SOURCES})
-source_group("dmap" FILES ${DMAP_INCLUDES})
-source_group("dmap" FILES ${DMAP_SOURCES})
+source_group("dmap" FILES ${MC_DMAP_INCLUDES})
+source_group("dmap" FILES ${MC_DMAP_SOURCES})
 source_group("framework" FILES ${MC_FRAMEWORK_INCLUDES})
 source_group("framework" FILES ${MC_FRAMEWORK_SOURCES})
 source_group("renderer" FILES ${MC_RENDERER_INCLUDES})
 source_group("renderer" FILES ${MC_RENDERER_SOURCES})
-source_group("libs\\mikktspace" FILES ${MIKKTSPACE_INCLUDES})
-source_group("libs\\mikktspace" FILES ${MIKKTSPACE_SOURCES})
+source_group("aas" FILES ${MC_AAS_INCLUDES})
+source_group("aas" FILES ${MC_AAS_SOURCES})
+source_group("aasbuild" FILES ${MC_AASBUILD_INCLUDES})
+source_group("aasbuild" FILES ${MC_AASBUILD_SOURCES})
+source_group("cm" FILES ${MC_CM_INCLUDES})
+source_group("cm" FILES ${MC_CM_SOURCES})
+source_group("libs\\mikktspace" FILES ${MC_MIKKTSPACE_INCLUDES})
+source_group("libs\\mikktspace" FILES ${MC_MIKKTSPACE_SOURCES})
+
+source_group("anim" FILES ${MC_GAME_INCLUDES})
+source_group("anim" FILES ${MC_GAME_SOURCES})
 
 set(MC_PRECOMPILED_SOURCES ${MC_SOURCES_ALL})
-list(REMOVE_ITEM MC_PRECOMPILED_SOURCES ${MIKKTSPACE_SOURCES})
+list(REMOVE_ITEM MC_PRECOMPILED_SOURCES ${MC_MIKKTSPACE_SOURCES})
 
 include_directories(
 	.
@@ -149,7 +187,7 @@ if(MSVC)
 
 	# set MSVC default debug directory on executable	
 	if(CMAKE_MAJOR_VERSION EQUAL 3 AND CMAKE_MINOR_VERSION GREATER_EQUAL 8)
-		set_target_properties(rbdmap PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/../../..")
+		set_target_properties(rbdmap PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/..")
 	endif()
 	
 else()
