Added ncurses dep to Linux rbdmap

--- a/neo/CMakeLists.txt
+++ b/neo/CMakeLists.txt
@@ -420,7 +420,12 @@ if(OPTICK)
 endif()
 
 add_subdirectory(idlib)
-add_subdirectory(tools/compilers)
+
+# RB: there haven't been requests for a separate map compiler executable by macOS users
+# and it is ok to not support it until someone also supports TrenchBroomBFG on macOS
+if(NOT APPLE)
+	add_subdirectory(tools/compilers)
+endif()
 
 file(GLOB NATVIS_SOURCES .natvis)
 
